# swarmLLM

./: .gitignore  AGENTS.md  README.md  TODO.md  agent.py  config.json  config.py  coordinator.py  events.jsonl  live_state.json  llm_client.py  logger.py  orchestrator.py  problem.py  project_swarm_optimization.md  prompt_logger.py  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  sandbox.py  setup_run.py  token_tracker.py  token_usage.json
.github/workflows/: deploy-pages.yml
configs/backends/: groq.cloud.example.toml  mlx-lm.local.example.toml  ollama.cloud.example.toml  ollama.local.example.toml  together.cloud.example.toml  vllm-metal.local.example.toml  vllm.single-node.example.toml
configs/mlx-lm/: qwen35.yaml  serve.example.yaml
configs/vllm/: serve.cluster.example.yaml  (+1 more)
docs/: DASHBOARD_TODO.md  DESIGN.md  LLM_INFRA_SPEC.md  index.html
memory/: MEMORY.md  iteration1_coders.json  iteration1_coordinator.json  project_swarm_optimization.md
problems/: __init__.py
scripts/: run.py  setup_run.py
swarmllm/: __init__.py  config.py
swarmllm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  conftest.py  test_attempt_memory.py  test_config.py  test_coordinator_prompt.py  test_exploit_context.py  test_llm_health.py  test_llm_profiles.py  test_llm_routing.py  test_pydanticai_integration.py  test_run_cli.py  test_sandbox.py  test_scheduling.py  test_setup_run.py  test_telemetry.py  test_tracking.py
website/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.js
(+5039 files in other folders)
