[project]
name = "swarmllm"
version = "0.1.0"
description = "Multi-Agent LLM Swarm for Optimization"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2",
    "pydantic-ai-slim[openai]>=1.73.0",
    "tomli>=2.4.1",
]

[project.scripts]
swarmllm = "scripts.run:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
